--- a/5 - XD Bonus Calculator/src/data/site.yml
+++ b/5 - XD Bonus Calculator/src/data/site.yml
@@ -1,1 +1,2 @@
 title: XD Tools
+description: This is just a test page. I'm not sure what content should go here, as the only purpose of this page is to provide a landing point for future pages. Just click something in the navbar.
